python-ecdsa (0.13.2-1) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * d/tests: Use AUTOPKGTEST_TMP instead of ADTTMP
  * d/control: Remove ancient X-Python-Version field
  * Convert git repository from git-dpm to gbp layout

  [ Josue Ortega ]
  * New upstream release (0.13.2)

 -- Josue Ortega <josue@debian.org>  Sat, 11 May 2019 16:47:39 -0600

python-ecdsa (0.13-3) unstable; urgency=medium

  [ Ondřej Nový ]
  * Fixed VCS URL (https)
  * d/control: Set Vcs-* to salsa.debian.org
  * d/copyright: Use https protocol in Format field
  * d/watch: Use https protocol
  * d/control: Remove XS-Testsuite field, not needed anymore

  [ Josue Ortega ]
  * New maintainer (Closes: #874388).
  * Bumps debhelper compat level from 9 to 11.
  * Bumps Standards-Version to 4.1.3, Ondřej Nový made the necessary changes.
  * Bumps X-Python-Version and X-Python3-Version version.

 -- Josue Ortega <josue@debian.org>  Sun, 01 Apr 2018 13:26:44 -0600

python-ecdsa (0.13-2) unstable; urgency=medium

  * Upload to unstable.

 -- Sebastian Ramacher <sramacher@debian.org>  Sat, 25 Apr 2015 12:19:22 +0200

python-ecdsa (0.13-1) experimental; urgency=medium

  * New upstream release.
  * debian/watch: Use PyPI redirector.
  * debian/patches/system-six.patch: Refresh patch.
  * debian/control: Bump Standards-Version.

 -- Sebastian Ramacher <sramacher@debian.org>  Mon, 09 Feb 2015 00:59:40 +0100

python-ecdsa (0.11-1) unstable; urgency=medium

  * New upstream release.
  * Switch to tarball from PyPI:
    - debian/watch: Use PyPI.
    - debian/patches/upstream-_version.patch: Removed, no longer needed.
    - debian/copyright: Point Source to PyPI.
  * debian/copyright: Update copyright years.
  * Add DEP-8 tests:
    - debian/tests: Add tests.
    - debian/control: Add XS-Testsuite.
  * debian/control: Add X-Python-Version. Upstream dropped support for
    anything before 2.6.

 -- Sebastian Ramacher <sramacher@debian.org>  Tue, 11 Mar 2014 13:15:59 +0100
